# WebForFileAnnotation

./: .env  README.md  h33.py  mysql_connector.py  pyproject.toml  requirements.txt  wsp.py
.streamlit/: wsp.py
file_functions/: prev_record.py  submit_api.py  update_db.py
streamlit/: config.toml
